<?xml version="1.0" encoding="utf-8"?>
<!-- Layout for the editor -->
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        >
        <android.support.v7.widget.CardView
            xmlns:card_view="http://schemas.android.com/apk/res-auto"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginBottom="8dp"
            android:layout_marginLeft="16dp"
            android:layout_marginRight="16dp"
            android:layout_marginTop="16dp"
            android:elevation="10dp"
            card_view:cardCornerRadius="16dp"
            tools:targetApi="lollipop">

            <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
                xmlns:tools="http://schemas.android.com/tools"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical"
                android:padding="@dimen/activity_margin"
                tools:context=".EditorActivity">

                <!-- Overview category -->
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <!-- Label -->
                    <TextView
                        style="@style/CategoryStyle"
                        android:text="@string/category_overview" />

                    <!-- Input fields -->
                    <LinearLayout
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="4dp"
                        android:layout_marginStart="4dp"
                        android:layout_weight="2"
                        android:orientation="vertical">

                        <!-- Name field -->
                        <EditText
                            android:id="@+id/edit_item_name"
                            style="@style/EditorFieldStyle"
                            android:hint="@string/hint_item_name"
                            android:inputType="textCapWords" />


                    </LinearLayout>
                </LinearLayout>

                <!-- Category -->
                <LinearLayout
                    android:id="@+id/container_gender"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <!-- Label -->
                    <TextView
                        style="@style/CategoryStyle"
                        android:text="@string/category_label" />

                    <!-- Input field -->
                    <LinearLayout
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="2"
                        android:orientation="vertical">

                        <!-- Gender drop-down spinner -->
                        <Spinner
                            android:id="@+id/spinner_category"
                            android:layout_width="wrap_content"
                            android:layout_height="48dp"
                            android:layout_marginEnd="16dp"
                            android:layout_marginRight="16dp"
                            android:spinnerMode="dropdown" />
                    </LinearLayout>
                </LinearLayout>

                <!-- Price category -->
                <LinearLayout
                    android:id="@+id/container_measurement"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <!-- Label -->
                    <TextView
                        style="@style/CategoryStyle"
                        android:text="@string/category_price" />

                    <!-- Input fields -->
                    <RelativeLayout
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="4dp"
                        android:layout_marginStart="4dp"
                        android:layout_weight="2">

                        <!-- Weight field -->
                        <EditText
                            android:id="@+id/edit_item_price"
                            style="@style/EditorFieldStyle"
                            android:hint="@string/hint_item_price"
                            android:inputType="number" />

                        <!-- Units for price (€) -->
                        <TextView
                            android:id="@+id/label_weight_units"
                            style="@style/EditorUnitsStyle"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/unit_item_price" />
                    </RelativeLayout>
                </LinearLayout>

                <!-- Quantity category -->
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="8dp"
                    android:layout_marginTop="8dp"
                    android:orientation="horizontal">

                    <!-- Label -->
                    <TextView
                        style="@style/CategoryStyle"
                        android:text="Quantity"
                        android:layout_width="114dp" />

                    <LinearLayout
                        style="@style/EditorFieldStyle"
                        android:layout_width="226dp"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal"
                        android:weightSum="5">

                        <ImageButton
                            android:id="@+id/decrease_quantity"
                            android:layout_width="0dp"
                            android:layout_height="match_parent"
                            android:layout_weight="1"
                            android:background="@color/colorAccent"
                            android:src="@drawable/ic_remove_black_24dp" />

                        <EditText
                            android:id="@+id/quantity_edit"
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_weight="3"
                            android:gravity="center"
                            android:inputType="number"
                            android:maxLength="4" />

                        <ImageButton
                            android:id="@+id/increase_quantity"
                            android:layout_width="0dp"
                            android:layout_height="match_parent"
                            android:layout_weight="1"
                            android:background="@color/colorAccent"
                            android:src="@drawable/ic_add_black_24dp" />
                    </LinearLayout>
                </LinearLayout>

                <!-- Description category -->
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <!-- Label -->
                    <TextView
                        style="@style/CategoryStyle"
                        android:text="@string/category_description" />

                    <!-- Input fields -->
                    <LinearLayout
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="4dp"
                        android:layout_marginStart="4dp"
                        android:layout_weight="2"
                        android:orientation="vertical">

                        <!-- Breed field -->
                        <EditText
                            android:id="@+id/edit_item_description"
                            style="@style/EditorFieldStyle"
                            android:hint="@string/hint_item_breed"
                            android:inputType="textCapSentences" />
                    </LinearLayout>
                </LinearLayout>

                <!-- Product Image category -->
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <TextView
                        android:id="@+id/image_title"
                        style="@style/CategoryStyle"
                        android:text="Product Image" />

                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:orientation="vertical">

                        <ImageView
                            android:id="@+id/image_view_holder"
                            android:layout_width="wrap_content"
                            android:layout_height="120dp"
                            android:adjustViewBounds="true"
                            android:layout_marginTop="16dp"
                            android:src="@drawable/blank" />

                        <Button
                            android:id="@+id/select_image"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="8dp"
                            android:background="@color/colorAccent"
                            android:paddingLeft="16dp"
                            android:paddingRight="16dp"
                            android:textColor="@android:color/black"
                            android:text="Change Image" />


                    </LinearLayout>
                </LinearLayout>
            </LinearLayout>
        </android.support.v7.widget.CardView>
        <android.support.v7.widget.CardView
            xmlns:card_view="http://schemas.android.com/apk/res-auto"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginBottom="16dp"
            android:layout_marginLeft="16dp"
            android:layout_marginRight="16dp"
            android:layout_marginTop="8dp"
            >

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="@dimen/activity_margin"
                android:orientation="horizontal"
                android:background="@color/colorAccent"
                >

                <TextView
                    android:id="@+id/supplier_name_title"
                    style="@style/CategoryStyle"
                    android:textColor="@android:color/black"
                    android:text="Product Supplier" />

                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="4dp"
                    android:layout_marginStart="4dp"
                    android:layout_weight="2"
                    android:orientation="vertical">

                    <EditText
                        android:id="@+id/supplier_name_edit"
                        style="@style/EditorFieldStyle"
                        android:hint="Supplier Name hint"
                        android:inputType="textCapWords"
                        android:layout_marginTop="8dp"
                        android:textColor="@android:color/black"
                        android:textColorHint="@android:color/black" />

                    <EditText
                        android:id="@+id/supplier_phone_edit"
                        style="@style/EditorFieldStyle"
                        android:hint="Supplier Phone hint"
                        android:inputType="phone"
                        android:layout_marginTop="8dp"
                        android:textColor="@android:color/black"
                        android:textColorHint="@android:color/black" />


                    <EditText
                        android:id="@+id/supplier_email_edit"
                        style="@style/EditorFieldStyle"
                        android:hint="Email Address hint"
                        android:inputType="textEmailAddress"
                        android:layout_marginTop="8dp"
                        android:textColor="@android:color/black"
                        android:textColorHint="@android:color/black" />

                </LinearLayout>
            </LinearLayout>
        </android.support.v7.widget.CardView>
    </LinearLayout>




</ScrollView>